...
    <string name="menu_download">Download Courses</string>
    <string name="menu_change_text_size">Change text size</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_privacy">Privacy and Your Data</string>
    <string name="menu_about">About and Help</string>
...
    <string name="widget_quiz_progress">Question %1$d of %2$d</string>
    <string name="widget_quiz_results_score">You scored: %1$.0f%%</string>
    <string name="widget_quiz_results_restart">Retake this quiz</string>
    <string name="widget_quiz_continue">Continue &gt;&gt;</string>
    <string name="widget_quiz_baseline_completed">Thank you for completing the pre-test. You can now continue to the course.</string>
    <string name="widget_quiz_baseline_goto_course">Continue to course &gt;&gt;</string>
...
    <string name="widget_quiz_unavailable_section">You must complete all the previous activities in this section before this quiz becomes available to you.</string>
    <string name="widget_quiz_unavailable_course">You must complete all the previous activities in this course before this quiz becomes available to you.</string>
    <string name="widget_quiz_unavailable_attempts">You have already attempted this quiz the max number of times allowed</string>
    <string name="widget_resource_open_file">Open \'%1$s\'</string>

...
    <string name="prefInterfaceLanguage">Interface language</string>
    <string name="prefHighlightCompleted">Highlight completed activities</string>
    <string name="prefServer">Server</string>
    <string name="prefServer_notChecked">Unchecked URL</string>
    <string name="prefServer_errorTitle">Invalid URL</string>
...
    <string name="prefNotifications_title">Notifications</string>
    <string name="prefSecurity_title">Security</string>
    <string name="prefAdvanced_title">Advanced</string>
    <string name="prefDisplay_title">Display</string>
    <string name="prefNotifications_description">System notifications and in-app gamification messages</string>
    <string name="prefSecurity_description">Admin protection of special actions and enabling/disabling certain functionalities from the screen</string>
...
    <string name="warning">Warning</string>
    <string name="loading">Loading</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="logout">Logout</string>
...
    <string name="change_setting_apikey_warning">This will invalidate the API keys for every user cached in the device, so they will need an active internet connection to login again.</string>
    <string name="change_setting_logout_warning">You are currently logged in. If you change this setting your session will finish. Do you confirm?</string>
    <string name="accept">Accept</string>
    <string name="user_not_logged_in">User not logged in</string>

...
    <string name="warning_reminder_at_least_one_day">You have to set at least one day</string>

    <string name="quiz_protected">Quiz protected</string>
    <string name="please_enter_quiz_password">Please, enter password to access this quiz</string>
    <string name="invalid_password">Invalid password</string>
    <string name="pref_export_full_activity_title">Export full activity data</string>
    <string name="full_activity_exported_success">Full activity exported successfully.\n\nYou can send it to external apps clicking "Share" button</string>
...
    <string name="password_needed_description">This topic is password protected. \n Please enter the password below to access content (you will only need to do this once).</string>
    <string name="password_activity_title">Activity protected</string>
    <string name="password_activity_description">This activity is password protected. \n Please, enter the password below to access its contents. </string>
    <string name="password_activity_incorrect">Incorrect password. Try again</string>
    <string name="password_activity_submit">Access contents</string>
    <string name="unlock_topic">Unlock topic</string>
    <string name="staging_warning_msg">You are connected to a staging/development server.</string>
...
