<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:key="prefDisplay">

    <ListPreference
        android:key="prefLanguage"
        android:title="@string/prefContentLanguage"
        app:icon="@drawable/ic_settings_language"
        app:allowDividerAbove="true"
        app:allowDividerBelow="true" />

    <ListPreference
...
