...
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/activity_password_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_password_title"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>
...
